--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ARFAZ</title>
     <link rel="stylesheet" href="C:\Users\AGUSTIN\Desktop\2 año Desarrollo Web\Web 1\TP final\ARFAZ.css">
-    <link rel="icon" type="image/x-icon" href="https://e1.pxfuel.com/desktop-wallpaper/146/516/desktop-wallpaper-woodworking-phone-list-woodworking-thumbnail.jpg">
     <style>
     
     </style>
@@ -14,7 +13,11 @@
    srcset="">
 </head>
 <body>
-  
+    <style>
+        body {
+          background-image: url('https://e1.pxfuel.com/desktop-wallpaper/146/516/desktop-wallpaper-woodworking-phone-list-woodworking-thumbnail.jpg');
+        }
+        </style>
 <header>
     <h1>ARFAZ</h1>
 </header>
