--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <head>
             <style>
             body {
-              background-image: url('img_girl.jpg');
+              background-image: url('https://e1.pxfuel.com/desktop-wallpaper/146/516/desktop-wallpaper-woodworking-phone-list-woodworking-thumbnail.jpg');
             }
             </style>
             </head>
