--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <head>
             <style>
             body {
-              background-image: url('https://e1.pxfuel.com/desktop-wallpaper/146/516/desktop-wallpaper-woodworking-phone-list-woodworking-thumbnail.jpg');
+              background-image: url('https://e1.pxfuel.com/desktop-wallpaper/628/445/desktop-wallpaper-woodworking-woodturning.jpg') alt="" width="100%"
+              srcset=""; 
             }
             </style>
             </head>
