--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
         <head>
             <style>
             body {
-              background-image: url('https://e1.pxfuel.com/desktop-wallpaper/628/445/desktop-wallpaper-woodworking-woodturning.jpg') alt="" width="100%"
-              srcset=""; 
+              background-image: url('https://e1.pxfuel.com/desktop-wallpaper/628/445/desktop-wallpaper-woodworking-woodturning.jpg'); 
             }
             </style>
             </head>
