--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
         </div>
         <div><h2> Carpinteria en Madera y Metal </h2></div>
         </nav>
-            <p>By default, the background image will repeat itself if it is smaller than the element where it is specified, in this case the body element.</p>
+        <article>
+            <td class="lenguajes"><a href="https://www.cabocarpenter.com/proyectos">Español</a><span>|</span> <a href="http://www.cabocarpenter.com/en/projects/">English</a></td>
+        </article>
+            
             
             </body>
             </html>
