--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ARFAZ</title>
-    <link rel="stylesheet" href="C:\Users\AGUSTIN\Desktop\2 año Desarrollo Web\Web 1\TP final\ARFAZ.css">
+    <link rel="stylesheet" href="ARFAZ.css">
     
         <head>
             <style>
