--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             </style>
             </head>
             <body>
+                <a href="index.html">hacer click aca</a>
             <nav>
                 <div>
             <h1><img src="ARFAZ.jpg" alt=""></h1>
