--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <head>
             <style>
             body {
-              background-image: url('https://e1.pxfuel.com/desktop-wallpaper/628/445/desktop-wallpaper-woodworking-woodturning.jpg'); 
+              background-image: url('fondo2.jpg'); 
               background-repeat: no-repeat;
               background-attachment: fixed;
               background-size: 100% 100%;
