--- a/index2.html
+++ b/index2.html
@@ -8,5 +8,14 @@
 </head>
 <body>
     <a href="index.html">hacer click aca</a>
+    <style>
+        body {
+          background-image: url('https://e1.pxfuel.com/desktop-wallpaper/628/445/desktop-wallpaper-woodworking-woodturning.jpg'); 
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+          background-size: 100% 100%;
+        }
+
+        </style>
 </body>
 </html>
