--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <head>
             <style>
             body {
-              background-image: url('fondo2.jpg'); 
+              background-image: url('https://e1.pxfuel.com/desktop-wallpaper/472/661/desktop-wallpaper-78-entries-in-wood-group-wood-background.jpg'); 
               background-repeat: no-repeat;
               background-attachment: fixed;
               background-size: 100% 100%;
@@ -24,7 +24,7 @@
                 <div>
             <h1><img src="ARFAZ.jpg" alt=""></h1>
         </div>
-        <div><h2> Carpinteria en Madera y Metal </h2></div>
+        <div><h2> Carpinteria en Madera y Metal </h2> </div>
         </nav>
         <article>
             <td class="lenguajes"><a href="https://www.cabocarpenter.com/proyectos">Español</a><span>|</span> <a href="http://www.cabocarpenter.com/en/projects/">English</a></td>
