--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             </style>
             </head>
             <body>
+                <background-size: 100% 100%>
                 <a href="index2.html">hacer click p2</a>
             <nav>
                 <div>
