--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div><h2> Carpinteria en Madera y Metal </h2> </div>
         </nav>
         <article>
-            <td class="lenguajes"><a href="https://agustinfz2.github.io/Agusfalcon.github.io/index.html">Español</a><span>|</span> <a href="http://www.cabocarpenter.com/en/projects/">English</a></td>
+            <td class="lenguajes"><a href="https://agustinfz2.github.io/Agusfalcon.github.io/index.html/">Español</a><span>|</span> <a href="https://agustinfz2.github.io/Agusfalcon.github.io/index2.html/">English</a></td>
         </article>
             
             
