--- a/index2.html
+++ b/index2.html
@@ -17,5 +17,27 @@
         }
 
         </style>
+        >
+
+<p> Productos en Madera: </p>
+
+<form action="/action_page.php">
+  <label for="Seleccione el Producto">Choose a car:</label>
+  <select id="Productos en Madera" name="Pedidos">
+    <option value="Muebles">Volvo</option>
+    <option value="Puertas">Saab</option>
+    <option value="Ventanas">Fiat</option>
+    <option value="Diseños Especiales a Pedido">Audi</option>
+  </select>
+  <input type="submit">
+</form>
+
 </body>
+<h2>The input Element</h2>
+
+<form action="/action_page.php">
+  <label for="fname">First name:</label><br>
+  <input type="text" id="fname" name="fname"><br><br>
+  <input type="submit" value="Submit">
+</form>
 </html>
