--- a/index2.html
+++ b/index2.html
@@ -22,22 +22,22 @@
 <p> Productos en Madera: </p>
 
 <form action="/action_page.php">
-  <label for="Seleccione el Producto">Choose a car:</label>
+  <label for="Seleccione el Producto">Seleccione:</label>
   <select id="Productos en Madera" name="Pedidos">
-    <option value="Muebles">Volvo</option>
-    <option value="Puertas">Saab</option>
-    <option value="Ventanas">Fiat</option>
-    <option value="Diseños Especiales a Pedido">Audi</option>
+    <option value="Muebles">Muebles</option>
+    <option value="Puertas">Puertas</option>
+    <option value="Ventanas">Ventanas</option>
+    <option value="Diseños Especiales a Pedido">Diseños Especiales a Pedido</option>
   </select>
   <input type="submit">
 </form>
 
 </body>
-<h2>The input Element</h2>
+<h2> Sus Datos </h2>
 
 <form action="/action_page.php">
-  <label for="fname">First name:</label><br>
+  <label for="fname">Coloque su nombre:</label><br>
   <input type="text" id="fname" name="fname"><br><br>
-  <input type="submit" value="Submit">
+  <input type="Enviar" value="Enviar">
 </form>
 </html>
