--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/pngtree-prismatic-abstract-minimalist-border-png-image_4976320.jpg">
     <title>ARFAZ</title>
     <link rel="stylesheet" href="ARFAZ.css">
     
@@ -20,10 +21,10 @@
             </head>
             <body>
                 <background-size: 100% 100%>
-                <a href="index2.html">hacer click p2</a>
+                <a href="index2.html">  </a>
             <nav>
                 <div>
-            <h1><img src="ARFAZ.jpg" alt=""></h1>
+            <h1><img src="ARFAZ.jpg" alt=""> ARFAZ.css </h1>
         </div>
         <div><h2> Carpinteria en Madera y Metal </h2> </div>
         </nav>
