--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="index.html">hacer click aca</a>
+    <a href="index.html"> <--- Volver al Inicio </a>
     <style>
         body {
           background-image: url('https://e1.pxfuel.com/desktop-wallpaper/628/445/desktop-wallpaper-woodworking-woodturning.jpg'); 
@@ -33,7 +33,7 @@
 </form>
 
 </body>
-<h2> Sus Datos </h2>
+<h2> Indique sus Datos </h2>
 
 <form action="/action_page.php">
   <label for="fname">Coloque su nombre:</label><br>
