--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="/pngtree-prismatic-abstract-minimalist-border-png-image_4976320.jpg">
+    <link rel="icon" href="/images.jfif">
     <title>ARFAZ</title>
     <link rel="stylesheet" href="ARFAZ.css">
     
