--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/images.jfif">
+    <link rel="icon" href="/pngtree-prismatic-abstract-minimalist-border-png-image_4976320.jpg ">
     <title>Document</title>
 </head>
 <body>
