--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </head>
             <body>
                 <background-size: 100% 100%>
-                <a href="index2.html">  </a>
+                <a href="index2.html"> "ARFAZ.jpg" </a>
             <nav>
                 <div>
             <h1><img src="ARFAZ.jpg" alt=""> ARFAZ.css </h1>
