--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/pngtree-prismatic-abstract-minimalist-border-png-image_4976320.jpg ">
+    <link rel="icon" type="image/x-icon" href="pngtree-prismatic-abstract-minimalist-border-png-image_4976320.jpg ">
     <title>Document</title>
 </head>
 <body>
@@ -41,4 +41,10 @@
   <input type="text" id="fname" name="fname"><br><br>
   <input type="Enviar" value="Enviar">
 </form>
+
+<footer>
+  <h1> <i class="glyphicon glyphicon-envelope"> </i> Manera de Contactarnos </h1>
+  <div class="container">  
+    
+</footer>
 </html>
