--- a/index2.html
+++ b/index2.html
@@ -26,8 +26,8 @@
   <label for="Seleccione el Producto">Seleccione:</label>
   <select id="Productos en Madera" name="Pedidos">
     <option value="Muebles">Muebles</option>
-    <option value="Puertas">Puertas</option>
-    <option value="Ventanas">Ventanas</option>
+    <option value="Puertas">Puertas</option><a href="index3.html"> --- >  </a>
+    <option value="Ventanas">Ventanas</option><a href=""></a>
     <option value="Diseños Especiales a Pedido">Diseños Especiales a Pedido</option>
   </select>
   <input type="submit">
@@ -39,7 +39,10 @@
 <form action="/action_page.php">
   <label for="fname">Coloque su nombre:</label><br>
   <input type="text" id="fname" name="fname"><br><br>
-  <input type="Enviar" value="Enviar">
+  <label for="fname">Coloque su Apellido:</label><br>
+  <input type="text" id="fname" name="fname"><br><br>
+  <input type="submit" value="Enviar">
+  
 </form>
 
 <footer>
