--- a/index3.html
+++ b/index3.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Puertas</title>
+    <style>
+        body {
+          background-image: url('https://e1.pxfuel.com/desktop-wallpaper/822/1018/desktop-wallpaper-wooden-door.jpg'); 
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+          background-size: 100%;
+        }
+
+        </style>
 </head>
 <body>
     <footer><a href="index2.html"> <--- Volver atras </a>
