--- a/index2.html
+++ b/index2.html
@@ -26,7 +26,7 @@
   <label for="Seleccione el Producto">Seleccione:</label>
   <select id="Productos en Madera" name="Pedidos">
     <option value="Muebles">Muebles</option>
-    <option value="Puertas">Puertas</option><a href="index3.html"> --- >  </a>
+    <a href="index3.html"></a><option value="Puertas">Puertas</option> --- >  </a>
     <option value="Ventanas">Ventanas</option><a href=""></a>
     <option value="Diseños Especiales a Pedido">Diseños Especiales a Pedido</option>
   </select>
