--- a/index.html
+++ b/index.html
@@ -24,7 +24,16 @@
                 <a href="index2.html"> Ver Nuestros Productos   </a>
             <nav>
                 <div>
-            <h1><img src="ARFAZ.jpg" alt=""> ARFAZ.css </h1>
+            <h1><img src="ARFAZ.jpg" alt="Imagen de carpinteria de juna koslay"> ARFAZ.css </h1>
+
+        </div>
+        <div>
+            <nav>
+                <ul>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                </ul>
+            </nav>
         </div>
         <div>
             <h2> Carpinteria en Madera y Metal </h2>
