--- a/index2.html
+++ b/index2.html
@@ -19,7 +19,17 @@
 
         </style>
         >
-
+        <div>
+          <nav>
+              <ul>
+                  <li><a href="index4.html">Muebles</a></li>
+                  <li><a href="index5.html">Puertas</a></li>
+                  <li><a href="index6.html">Ventanas</a></li>
+                  <li><a href="index7.html">Diseños Especiales a Pedido</a></li>
+                  
+              </ul>
+          </nav>
+      </div>
 <p> Productos en Madera: </p>
 
 <form action="/action_page.php">
