--- a/index2.html
+++ b/index2.html
@@ -21,11 +21,11 @@
         >
         <div>
           <nav>
-              <ul>
-                  <li><a href="index4.html">Muebles</a></li>
-                  <li><a href="index5.html">Puertas</a></li>
-                  <li><a href="index6.html">Ventanas</a></li>
-                  <li><a href="index7.html">Diseños Especiales a Pedido</a></li>
+              <ul >
+                  <li><a href="index3.html">Muebles</a></li>
+                  <li><a href="index4.html">Aberturas</a></li>
+                  <li><a href="index5.html">Regaleria</a></li>
+                  <li><a href="index6.html">Diseños Especiales a Pedido</a></li>
                   
               </ul>
           </nav>
@@ -45,7 +45,7 @@
 
 </body>
 <h2> Indique sus Datos </h2>
-
+<!-- selector -->
 <form action="/action_page.php">
   <label for="fname">Coloque su nombre:</label><br>
   <input type="text" id="fname" name="fname"><br><br>
