--- a/index3.html
+++ b/index3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Puertas</title>
+    <title>Muebles</title>
     <style>
         body {
           background-image: url('https://e1.pxfuel.com/desktop-wallpaper/822/1018/desktop-wallpaper-wooden-door.jpg'); 
