--- a/index3.html
+++ b/index3.html
@@ -7,7 +7,7 @@
     <title>Muebles</title>
     <style>
         body {
-          background-image: url('https://e1.pxfuel.com/desktop-wallpaper/822/1018/desktop-wallpaper-wooden-door.jpg'); 
+          background-image: url('https://2.bp.blogspot.com/_MVdtJCXKmSg/TPadvpO3i8I/AAAAAAAAFB0/7eo03vJELgQ/s1600/Muebles+22.jpg'); 
           background-repeat: no-repeat;
           background-attachment: fixed;
           background-size: 100%;
