--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a href="index2.html"> Ver Nuestros Productos </a>
             <nav>
                 <div>
-            <p><img src="ARFAZ.jpg" alt="Imagen de carpinteria San Luis"> </p>
+            <h1><img src="ARFAZ.jpg" alt="Imagen de carpinteria San Luis"> </h1>
 
         </div>
        
