--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <section class="content contact">
     <h2 class="title">Contacto</h2>
 <p>Tel 2664455999</p>
-<figure class="map">2<img src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2427.281992593203!2d-66.26947100887024!3d-33.29337012611482!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1684371593647!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>" height="220px" width="100%" alt="mapa"> 
+<figure class="map">2<img src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2427.281992593203!2d-66.26947100887024!3d-33.29337012611482!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1684371593647!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" height="220px" width="100%" alt="mapa"> 
 </figure>
 
 </section>
