--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <section class="content contact">
     <h2 class="title">Contacto</h2>
 <p>Tel 2664455999</p>
-<figure class="map">2<img src="ubicacion.jpg" height="220px" width="100%" alt="mapa"> 
+<figure class="map">Encontranos en : <img src="ubicacion.jpg" height="220px" width="100%" alt="mapa"> 
 </figure>
 
 </section>
