--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="icon" type="image/x-icon" href="pngtree-prismatic-abstract-minimalist-border-png-image_4976320.jpg">
     <title>ARFAZ</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    
-        
+    <link rel="stylesheet" href="estilo.css">
+    <title>Inicio y presentacion de pagina web</title>    
+
             </head>
             <body>
                 <div class="head">
