--- a/index2.html
+++ b/index2.html
@@ -7,11 +7,70 @@
     <link rel="icon" type="image/x-icon" href="pngtree-prismatic-abstract-minimalist-border-png-image_4976320.jpg ">
     <title>Document</title>
 </head>
+<section class="content sau">
+  <h2 class="title">Productos</h2>
+<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+  Maxime recusandae eaque autem rerum dignissimos. Magni ab animi 
+  vero voluptas quasi illum alias nesciunt modi, aliquid aperiam 
+  eligendi quod dignissimos recusandae.</p>
+
+  <div class="box-conteiner">
+
+<div class="box">
+  <i class="fab fa-angular"></i>
+  <h3>lorem</h3>
+  <p>labore molestias cosecturer</p>
+</div>        
+<div class="box">
+  <i class="fab fa-angular"></i>
+  <h3>lorem</h3>
+  <p>labore molestias cosecturer</p>
+</div>   
+<div class="box">
+  <i class="fab fa-angular"></i>
+  <h3>lorem</h3>
+  <p>labore molestias cosecturer</p>
+</div>   
+
+  </div>
+</section>    
+
+<section class="content about">
+
+  <h2 class="title">Nosotros</h2>
+  <p>Lorem chinwencha sit constructor pa voluptas
+      anda pa ya bobo. Dale tilin vos podes tilin 
+      a la mierda tilin
+  </p>
+
+  <a href="#" class="btn">Saber mas</a>
+
+  <section class="content price">
+<article class="contain">
+<h2 class="title">Precio</h2>
+<p>lorem me dicen el pepe el pepe
+  me dicen el pepe el pepe, infu,us 
+  micarnoc estrufac nurmu chinchin tilin
+</p>
+
+<a href="#" class="btn">Saber Precio</a>
+
+</article>
+  </section>
+
+<section class="content contact">
+  <h2 class="title">Contacto</h2>
+<p>Tel 2664455999</p>
+<figure class="map">Encontranos en : <img src="ubicacion.jpg" height="220px" width="100%" alt="mapa"> 
+</figure>
+
+</section>
+</section>
 <body>
     <a href="index.html"> <--- Volver al Inicio </a>
     <style>
         body {
-          background-image: url('https://e1.pxfuel.com/desktop-wallpaper/628/445/desktop-wallpaper-woodworking-woodturning.jpg'); 
+          background-image: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fs-media-cache-ak0.pinimg.com%2Foriginals%2F7e%2F51%2F2b%2F7e512b24e152fedb99a8208a2f6c13b1.jpg&f=1&nofb=1&ipt=f259a0206dc76f61c10c7b1bc17e767c1e2b249404857254a227a63074109fd9&ipo=images'); 
           background-repeat: no-repeat;
           background-attachment: fixed;
           background-size: 100% 100%;
