--- a/index2.html
+++ b/index2.html
@@ -5,14 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="pngtree-prismatic-abstract-minimalist-border-png-image_4976320.jpg ">
+    <link rel="stylesheet" href="estilo.css">
     <title>Document</title>
 </head>
 <section class="content sau">
-  <h2 class="title">Productos</h2>
-<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-  Maxime recusandae eaque autem rerum dignissimos. Magni ab animi 
-  vero voluptas quasi illum alias nesciunt modi, aliquid aperiam 
-  eligendi quod dignissimos recusandae.</p>
+  <h1 class="title">Productos</h1>
+<p>Nuestra Carpinteria realiza son relizados con un sin fin de maderas e inclusive la combinacion
+   de distintos materiales para realzar el aspecto de los productos.  .</p>
 
   <div class="box-conteiner">
 
