--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@
             <header class="content header">
                 <h2 class="titulo">Inicio</h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                     Suscipit cum amet ipsam, ex architecto quibusdam aspernatur 
-                     dolores corrupti distinctio quos quae fugit fugiat quam 
-                     repellendus voluptate illum eius tempore voluptatum?
+                    AEFAZ El crear no tiene limites
                 </p>
 
                 <div class="btn-home">
