--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
     <title>Carpinteria</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="estilo.css">
-    <title>Inicio y presentacion de pagina web</title>    
+    <title>Inicio y presentacion de pagina web</title>  
+
 <script src="carrousell.js"></script>
             </head>
-            <body>
+            <style>
+            body>{
+                background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQR4tc8p37NAQLR56aKexFPrl--yFACi-kJrN4uyQMJi00mqDd9vWYEgwSG4mEVU0r83PA&usqp=CAU'); 
+                background-repeat: no-repeat;
+                background-attachment: fixed;
+                background-size: 100% 100%;
+            }
+        </style>
                 <div class="head">
 <div class="logo">
     <a href="">Logo</a>
