--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
 </head>
 <section class="content sau">
   <h1 class="title">Productos</h1>
-<p>Nuestra Carpinteria realiza son relizados con un sin fin de maderas e inclusive la combinacion
+<>Nuestra Carpinteria realiza son relizados con un sin fin de maderas e inclusive la combinacion
    de distintos materiales para realzar el aspecto de los productos.  .</p>
 
   <div class="box-conteiner">
