--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <script src="carrousell.js"></script>
             </head>
             <style>
-            body>{
-                background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQR4tc8p37NAQLR56aKexFPrl--yFACi-kJrN4uyQMJi00mqDd9vWYEgwSG4mEVU0r83PA&usqp=CAU'); 
+            body{
+                background-image: url('https://i.pinimg.com/564x/fd/62/23/fd6223062bffb36f82ff18d8fb8fc1b8.jpg'); 
                 background-repeat: no-repeat;
                 background-attachment: fixed;
                 background-size: 100% 100%;
