--- a/index.html
+++ b/index.html
@@ -31,7 +31,26 @@
         <li><a href="index4.html">Contacto  </a></li>
         </ul>
 </nav>
-       
-       
+       <div class="contenedor">
+
+<div class="columna1">
+    <h3>Hola 1</h3>
+    <p>toda la gama de productos</p>
+    <button id="Productos">Productos</button>
+</div>
+
+<div class="columna2">
+    <h3>Hola 2</h3>
+    <p>saber mas de lo que hacemos</p>
+    <button id="Sobre Nosotros"><a href="index3.html">Nosotros</a></button>
+</div>
+
+<div class="columna3">
+    <h3>Hola 2</h3>
+    <p>ubicacion y demas</p>
+    <button id="Contactos">Contactos</button>
+</div>
+       </div>
+ 
 </body>
 </html>
