--- a/index3.html
+++ b/index3.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <h1 class="titulo">Sobre Nosotros</h1>
-    <footer><a href="index2.html"> <--- Volver atras </a>
+    <footer><a href="index.html"> <--- Volver al Inicio </a>
     </footer>
    
 </body>
