--- a/index2.html
+++ b/index2.html
@@ -37,13 +37,13 @@
           <div class="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item">
-                    <img src= https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2F2.bp.blogspot.com%2F_MVdtJCXKmSg%2FTPadvpO3i8I%2FAAAAAAAAFB0%2F7eo03vJELgQ%2Fs1600%2FMuebles%2B22.jpg&f=1&nofb=1&ipt=c4c72944c49597fe2041e035ea0976fa785e3941423eac37a3afc808e2b760e7&ipo=images alt="Imagen 1">
+                    <img src= "pxfuel.jpg" alt="Imagen 1">
                   </div>
                   <div class="carousel-item">
-                    <img src=https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Firp-cdn.multiscreensite.com%2Fb8bfbe58%2FDESKTOP%2Fjpg%2F014.jpg&f=1&nofb=1&ipt=057b30b097065436ddf1f0fa044142e5ffef202bd3c4af368dba0cad782bc59f&ipo=images alt="Imagen 2">
+                    <img src="pxfuel (1).jpg" alt="Imagen 2">
                   </div>
                   <div class="carousel-item">
-                    <img src= https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.pinimg.com%2Foriginals%2F34%2F56%2Fae%2F3456ae7336f553ca46435a185d2bbe58.jpg&f=1&nofb=1&ipt=06fbf6a03214c2a389538caa10a939fc91af9e1d0320d68468f7ca009da4866c&ipo=images alt="Imagen 3">
+                    <img src= "ARFAZ.jpg" alt="Imagen 3">
                   </div>
                 </div>
               </div>
