--- a/index2.html
+++ b/index2.html
@@ -38,10 +38,10 @@
           <div class="carousel">
             <div class="carousel-inner">
              <div class="carousel-item">
-             <img src= "pxfuel.jpg" alt="Imagen 1">
+             <img src= "https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.Q_jMfrXbf8lO7INx6yU24AHaFh%26pid%3DApi&f=1&ipt=00d636ad0738556e88cdfbfbb2ec747933b57690826dbff22680ce68a716c6e4&ipo=images" alt="Imagen 1">
              </div>
              <div class="carousel-item">
-             <img src="pxfuel (1).jpg" alt="Imagen 2">
+             <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.S8JvrrtdoLHsY53-pFGjiAHaHa%26pid%3DApi&f=1&ipt=c88cc8110fa0e562f20998379cf792ec930db881a68aded3bfeb41e35e3175cc&ipo=images" alt="Imagen 2">
              </div>
              <div class="carousel-item">
              <img src= "ARFAZ.jpg" alt="Imagen 3">
