--- a/index2.html
+++ b/index2.html
@@ -39,24 +39,26 @@
        <div class="carousel">
             <div class="carousel-inner">
              <div class="carousel-item">
-             <img src= "https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.Q_jMfrXbf8lO7INx6yU24AHaFh%26pid%3DApi&f=1&ipt=00d636ad0738556e88cdfbfbb2ec747933b57690826dbff22680ce68a716c6e4&ipo=images" alt="Imagen 1">
+             <img src= "https://i.pinimg.com/236x/32/64/5b/32645bc086156d4b27227e891be2a041.jpg" alt="Imagen 1">
              </div>
              <div class="carousel-item">
-             <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.S8JvrrtdoLHsY53-pFGjiAHaHa%26pid%3DApi&f=1&ipt=c88cc8110fa0e562f20998379cf792ec930db881a68aded3bfeb41e35e3175cc&ipo=images" alt="Imagen 2">
+             <img src="https://i.pinimg.com/236x/7f/0e/bb/7f0ebbdfb04b8ce07e214b8944f482a3.jpg" alt="Imagen 2">
              </div>
              <div class="carousel-item">
-             <img src= "" alt="Imagen 3">
+             <img src= "https://i.pinimg.com/236x/7c/11/77/7c1177687141db0843608b4127e2a3b9.jpg" alt="Imagen 3">
              </div>
              <div class="carousel-item">
-                <img src= "ARFAZ.jpg" alt="Imagen 3">
+                <img src= "https://i.pinimg.com/236x/20/78/ee/2078eebdedf4684689f601004b83ee00.jpg" alt="Imagen 4">
              </div>
                 <div class="carousel-item">
-                <img src= "ARFAZ.jpg" alt="Imagen 3">
+                <img src= "https://i.pinimg.com/236x/1c/e6/8e/1ce68e6353f74d8b66c83ef86e89d988.jpg" alt="Imagen 5">
              </div>
              <div class="carousel-item">
-                <img src= "ARFAZ.jpg" alt="Imagen 3">
+                <img src= "https://i.pinimg.com/236x/b6/b7/f2/b6b7f2d52f57f5880fde34581db2557a.jpg" alt="Imagen 6">
              </div>
-
+             <div class="carousel-item">
+                <img src= "https://i.pinimg.com/236x/09/bc/f8/09bcf86ed95eacdb5c0f8d4054b51a84.jpg" alt="Imagen 6">
+             </div>
              </div>
              </div>
              <div class="carousel-btn">
