--- a/index2.html
+++ b/index2.html
@@ -59,7 +59,11 @@
              <div class="carousel-item">
                 <img src= "https://i.pinimg.com/236x/09/bc/f8/09bcf86ed95eacdb5c0f8d4054b51a84.jpg" alt="Imagen 6">
              </div>
+             
+             <div class="carousel-item">
+                <img src= "https://i.pinimg.com/236x/a6/ea/f1/a6eaf152ff9b12e4032168a8fefaa57a.jpg" alt="Imagen 7">
              </div>
+            </div>
              </div>
              <div class="carousel-btn">
              <button id="prevBtn">Anterior</button>
