--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Carpinteria</title>
     <link rel="fondo" href="https://img.freepik.com/fotos-premium/primer-plano-roca-textura-rugosa-lineas_235573-3867.jpg">
     <link rel="stylesheet" href="estilo.css">
-    <title>Inicio y presentacion de pagina web</title>  
+    <title>Inicio</title>  
     <h2 class="titulo">Carpinteria</h2>
     <h2 class="titulo">ARFAZ</h2>
        
