--- a/index3.html
+++ b/index3.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo.css">
+    <title>Sobre Nosotros</title>
     <style>
         body {
           background-image: url('https://2.bp.blogspot.com/_MVdtJCXKmSg/TPadvpO3i8I/AAAAAAAAFB0/7eo03vJELgQ/s1600/Muebles+22.jpg'); 
