--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="pngtree-prismatic-abstract-minimalist-border-png-image_4976320.jpg ">
     <link rel="stylesheet" href="estilo.css">
-
+    <title>Productos</title>
   
 </head>
 <section>
