--- a/index2.html
+++ b/index2.html
@@ -39,29 +39,31 @@
        <div class="carousel">
             <div class="carousel-inner">
              <div class="carousel-item">
-             <img src= "https://i.pinimg.com/236x/32/64/5b/32645bc086156d4b27227e891be2a041.jpg" alt="Imagen 1">
+             <img src= "https://i.pinimg.com/236x/32/64/5b/32645bc086156d4b27227e891be2a041.jpg" alt="abertura 1">
              </div>
              <div class="carousel-item">
-             <img src="https://i.pinimg.com/236x/7f/0e/bb/7f0ebbdfb04b8ce07e214b8944f482a3.jpg" alt="Imagen 2">
+             <img src="https://i.pinimg.com/236x/7f/0e/bb/7f0ebbdfb04b8ce07e214b8944f482a3.jpg" alt="abertura 2">
              </div>
              <div class="carousel-item">
-             <img src= "https://i.pinimg.com/236x/7c/11/77/7c1177687141db0843608b4127e2a3b9.jpg" alt="Imagen 3">
+             <img src= "https://i.pinimg.com/236x/7c/11/77/7c1177687141db0843608b4127e2a3b9.jpg" alt="abertura 3">
              </div>
              <div class="carousel-item">
-                <img src= "https://i.pinimg.com/236x/20/78/ee/2078eebdedf4684689f601004b83ee00.jpg" alt="Imagen 4">
+                <img src= "https://i.pinimg.com/236x/20/78/ee/2078eebdedf4684689f601004b83ee00.jpg" alt="abertura 4">
              </div>
                 <div class="carousel-item">
-                <img src= "https://i.pinimg.com/236x/1c/e6/8e/1ce68e6353f74d8b66c83ef86e89d988.jpg" alt="Imagen 5">
+                <img src= "https://i.pinimg.com/236x/1c/e6/8e/1ce68e6353f74d8b66c83ef86e89d988.jpg" alt="abertura 5">
              </div>
              <div class="carousel-item">
-                <img src= "https://i.pinimg.com/236x/b6/b7/f2/b6b7f2d52f57f5880fde34581db2557a.jpg" alt="Imagen 6">
+                <img src= "https://i.pinimg.com/236x/b6/b7/f2/b6b7f2d52f57f5880fde34581db2557a.jpg" alt="abertura 6">
              </div>
              <div class="carousel-item">
-                <img src= "https://i.pinimg.com/236x/09/bc/f8/09bcf86ed95eacdb5c0f8d4054b51a84.jpg" alt="Imagen 6">
+                <img src= "https://i.pinimg.com/236x/09/bc/f8/09bcf86ed95eacdb5c0f8d4054b51a84.jpg" alt="abertura 6">
              </div>
-             
              <div class="carousel-item">
-                <img src= "https://i.pinimg.com/236x/a6/ea/f1/a6eaf152ff9b12e4032168a8fefaa57a.jpg" alt="Imagen 7">
+                <img src= "https://i.pinimg.com/236x/a6/ea/f1/a6eaf152ff9b12e4032168a8fefaa57a.jpg" alt="abertura 7">
+             </div>
+             <div class="carousel-item">
+                <img src= "https://i.pinimg.com/236x/5b/f9/ad/5bf9ad7280d12e4686da1c40de92298a.jpg" alt="abertura 8">
              </div>
             </div>
              </div>
