--- a/index2.html
+++ b/index2.html
@@ -44,7 +44,7 @@
         <button id="prevBtn">Anterior</button>
         <button id="nextBtn">Siguiente</button>
     </div>
-    <script src="carrusell.js"></script>
+    <script src="carruusell.js"></script>
 </body>
 
 </html>
