--- a/index2.html
+++ b/index2.html
@@ -37,6 +37,33 @@
             <div class="carousel-item">
                 <img src="https://i.pinimg.com/236x/7f/0e/bb/7f0ebbdfb04b8ce07e214b8944f482a3.jpg" alt="abertura 2">
             </div>
+            <div class="carousel-item">
+                <img src="https://i.pinimg.com/236x/11/7f/b8/117fb850f82b45bd69a0fd26e708b0f1.jpg" alt="abertura 3">
+            </div>
+            <div class="carousel-item">
+                <img src="https://i.pinimg.com/236x/5b/f9/ad/5bf9ad7280d12e4686da1c40de92298a.jpg" alt="abertura 4">
+            </div>
+            <div class="carousel-item">
+                <img src="https://i.pinimg.com/236x/a0/74/27/a074278d19959f651ee335ed4d64f038.jpg" alt="abertura 5">
+            </div>
+            <div class="carousel-item">
+                <img src="https://i.pinimg.com/236x/f8/94/36/f89436c6ea2caaf24d8dc8a88f24fb61.jpg" alt="abertura 6">
+            </div>
+            <div class="carousel-item">
+                <img src="https://i.pinimg.com/236x/bb/d6/55/bbd6554e583fd193d67bae2e82d1c2f5.jpg" alt="abertura 7">
+            </div>
+            <div class="carousel-item">
+                <img src="https://i.pinimg.com/236x/7c/11/77/7c1177687141db0843608b4127e2a3b9.jpg" alt="abertura 8">
+            </div>
+            <div class="carousel-item">
+                <img src="https://i.pinimg.com/236x/f7/87/66/f787668dc24e803c55639d738c15ffd8.jpg" alt="abertura 9">
+            </div>
+            <div class="carousel-item">
+                <img src="https://i.pinimg.com/236x/dd/4f/97/dd4f976f1fb4a65fe67aaa4ff1588af8.jpg" alt="abertura 10">
+            </div>
+            <div class="carousel-item">
+                <img src="https://i.pinimg.com/236x/a7/46/08/a7460868d359097df2a28ef71302c32c.jpg" alt="abertura 11">
+            </div>
             <!-- Agrega más elementos de carrusel según sea necesario -->
         </div>
     </div>
