--- a/index2.html
+++ b/index2.html
@@ -38,12 +38,12 @@
         
     <!-- Second image --> 
             <div class="slides">
-                <img class="slide" src="https://gsg-61ea.kxcdn.com/media/contents/sydney%20harbour%20aerial%20jamie-davies-Hao52Fu9-F8-unsplash%20(2).jpg"> 
+                <img class="slide" src="https://i.pinimg.com/236x/36/69/e5/3669e59cd76df5231ee55685500b8344.jpg"> 
             </div>
         
      <!-- Third image --> 
         <div class="slides">
-                <img class="slide" src="https://media.tacdn.com/media/attractions-splice-spp-674x446/0b/3f/6d/47.jpg"> 
+                <img class="slide" src="https://i.pinimg.com/236x/a7/5a/0f/a75a0fd3a34a98350566696722c6ce51.jpg"> 
             </div>
             <a id="previous" class="arrow">&#10094</a>
             <a id="next" class="arrow">&#10095</a>
