--- a/index2.html
+++ b/index2.html
@@ -64,10 +64,16 @@
                 <img class="slide" src="https://i.pinimg.com/236x/a3/21/5a/a3215a72eeb8c63a41f329511756564d.jpg"> 
             </div>
             <div class="slides">
-                <img class="slide" src="https://i.pinimg.com/236x/4c/73/05/4c7305c69a5c9c7a447fdc525b92f445.jpg"> 
+                <img class="slide" src="https://i.pinimg.com/236x/5c/56/fa/5c56fa0bac6534ce439e4b0ee456a0e2.jpg"> 
             </div>
             <div class="slides">
-                <img class="slide" src="https://i.pinimg.com/236x/62/9d/ef/629defc32153cf4f4f23f63e5af3a49f.jpg"> 
+                <img class="slide" src="https://i.pinimg.com/236x/69/2a/a2/692aa22bfd8125b3d833286ccb235d08.jpg"> 
+            </div>
+            <div class="slides">
+                <img class="slide" src="https://i.pinimg.com/236x/4a/90/de/4a90de7f53a29576d52e6efd5174f18a.jpg"> 
+            </div>
+            <div class="slides">
+                <img class="slide" src="https://i.pinimg.com/236x/4c/73/05/4c7305c69a5c9c7a447fdc525b92f445.jpg"> 
             </div>
 
             <a id="previous" class="arrow">&#10094</a>
