--- a/index.html
+++ b/index.html
@@ -43,8 +43,13 @@
 
 <div class="columna1">
     <h3>Productos</h3>
-    <p>Desea conocer toda la 
-        gamma de productos</p>
+    <p>Tus ideas plasmala en la realidad; hacenos conocer 
+        lo que imaginas tu hogar o proyecto, nosotros 
+        lo hacemos realidad.
+
+        Podes observar la gamma de productos
+        piqueando en el boton de abajo
+    </p>
     <button id="Productos"><a href="index2.html">Ver Nuestros Productos</a></button>
 </div>
 
