--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <nav class="navbar">
          
         <ul>
-                  <li> <a href="index.html"> <-- Volver al Inicio   </a></li>
+                  <li> <a href="index.html"> Recargar Inicio </a></li>
                   <li></li><a href="index2.html">Productos </a></li>
-                  <li></li><a href="index3.html">Nosotros  </a></li>
+                  <li></li><a href="index3.html">Nosotros </a></li>
                   <li></li><a href="index4.html">Contacto</a></li>
                 </ul>
                   </nav>
