--- a/index2.html
+++ b/index2.html
@@ -21,13 +21,14 @@
         }
     </style>
     <nav class="navbar">
+         
         <ul>
-            <li><a href="index.html"> <-- Volver al Inicio </a></li>
-            <li><a href="index2.html">Productos</a></li>
-            <li><a href="index3.html">Nosotros</a></li>
-            <li><a href="index4.html">Contacto</a></li>
-        </ul>
-    </nav>
+                  <li> <a href="index.html"> <-- Volver al Inicio </a></li>
+                  <li></li><a href="index2.html">Productos </a></li>
+                  <li></li><a href="index3.html">Nosotros </a></li>
+                  <li></li><a href="index4.html">Contacto</a></li>
+                </ul>
+                  </nav>
     
     <div id="window"   >
         <div id="slide-container">
