--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="pngtree-prismatic-abstract-minimalist-border-png-image_4976320.jpg">
-    <link rel="stylesheet" href="estilocarrousel.css">
+    <link rel="stylesheet" href="estilo.css">
     <title>Productos</title>
     <h1>Nuestros Preoductos</h1>
 </head>
@@ -30,6 +30,7 @@
                 </ul>
                   </nav>
     
+    <link rel="stylesheet" href="estilocarrousel.css">
     <div id="window"   >
         <div id="slide-container">
             <div class="slides">
