--- a/index2.html
+++ b/index2.html
@@ -32,6 +32,7 @@
     
     <link rel="stylesheet" href="estilocarrousel.css">
     <div id="window"   >
+        <h6>Estos son algunos de nuestros productos</h6>
         <div id="slide-container">
             <div class="slides">
           
@@ -72,7 +73,7 @@
                 <img class="slide" src="https://i.pinimg.com/236x/4c/73/05/4c7305c69a5c9c7a447fdc525b92f445.jpg"> 
             </div>
             <div class="slides">
-                <img class="slide" src="https://i.pinimg.com/236x/6e/30/f2/6e30f24ab8928a922ad785f81216c64e.jpg"> 
+                <img class="slide" src="https://i.pinimg.com/236x/83/91/81/839181bf12863763b7c32bb1a4455c3a.jpg"> 
             </div>
 
             <a id="previous" class="arrow">&#10094</a>
