--- a/index3.html
+++ b/index3.html
@@ -19,7 +19,11 @@
 </head>
 <body>
     <h1 class="titulo">Sobre Nosotros</h1>
-    <footer><a href="index.html"> <--- Volver al Inicio </a>
+    <nav class="navbar"> 
+      <ul>
+                <li> <a href="index.html"> <-- Volver al Inicio </a></li>
+              </ul>
+                </nav>
     </footer>
    
 </body>
