--- a/index4.html
+++ b/index4.html
@@ -36,7 +36,9 @@
       <div id="errores">
       </div>
     </form>
-    <h1>Nos Puede Encontrar en San Luis en:</h1>
+    <h2>Tel: 266584975 </h2>
+    <h1>Nos Puede Encontrar en: </h1>
+    <h6>Avenida viento Chorrillero 1234</h6>
     <img src="ubicacion.jpg" alt="ubicacion de carpinteria">
 </body>
 </html>
