--- a/index2.html
+++ b/index2.html
@@ -31,7 +31,7 @@
                   </nav>
 
 <div>
-                  <p>Materiales con los cuales trabajamos</p>
+                  <h2>Materiales con los cuales trabajamos</h2>
                          <div class="contenedor">
                   
                             <div class="columna1">
