--- a/index4.html
+++ b/index4.html
@@ -17,28 +17,31 @@
         </style>
 </head>               
 <nav class="navbar">
-         
+         <div>
     <ul>
               <li> <a href="index.html"> <-- Volver al Inicio </a></li>
             </ul>
               </nav>
-    </footer >
-
-    <h1>Contactenos </h1>
-    <form onsubmit="return validar()" id="f_contacto">
-      <label for="f_nombre">Nombre</label>
-      <input id="f_nombre" autofocus />
-      <label for="f_mensaje">Mensaje</label>
-      <textarea id="f_mensaje" rows="3"></textarea>
-      <label for="f_email">Email</label>
-      <input id="f_email" />
-      <button type="submit">Enviar</button>
-      <div id="errores">
-      </div>
-    </form>
+            </div>
+              <div>
     <h2>Tel: 266584975 </h2>
     <h1>Nos Puede Encontrar en: </h1>
     <h6>Avenida viento Chorrillero 1234</h6>
     <img src="ubicacion.jpg" alt="ubicacion de carpinteria">
+</div>
+<div>
+    <h1>Contactenos </h1>
+    <form onsubmit="return validar()" id="f_contacto">
+        <label for="f_nombre">Nombre</label>
+        <input id="f_nombre" autofocus />
+        <label for="f_mensaje">Mensaje</label>
+        <textarea id="f_mensaje" rows="3"></textarea>
+        <label for="f_email">Email</label>
+        <input id="f_email" />
+        <button type="submit">Enviar</button>
+        <div id="errores">
+        </div>
+      </form>
+    </div>
 </body>
 </html>
