--- a/index3.html
+++ b/index3.html
@@ -25,17 +25,31 @@
               </ul>
                 </nav>
                 <div>
-                <p>  Muchos de nosotros tenemos muebles de maderas hechos por nuestros abuelos. Sin embargo, es una tradición que no se ha mantenido. Aunque no estoy segura del por qué, se me ocurre que una de las razones puede ser la falta de espacio que se necesita para ubicar las máquinas y hacer aserrín.
+                <p> <div>< Muchos de nosotros tenemos muebles de maderas hechos por nuestros abuelos. Sin embargo, 
+                  es una tradición que no se ha mantenido. Aunque no estoy segura del por qué, se me ocurre que una 
+                  de las razones puede ser la falta de espacio que se necesita para ubicar las máquinas y hacer aserrín.
 
-Pepe Argento, tenía como hobby hacer muebles de madera, sin embargo, le costaba encontrar un lugar adecuado para trabajar. Esta necesidad y su deseo de compartir su pasión por otras personas, lo llevaron a crear, junto a Andrew Ayer, Asaf Peled, Made de Madera, un espacio de co-working para los amantes de la madera. A continuación, les cuento de qué se trata.
-
+Pepe Argento, tenía como hobby hacer muebles de madera, sin embargo, le costaba encontrar un lugar adecuado para 
+trabajar. Esta necesidad y su deseo de compartir su pasión por otras personas, lo llevaron a crear, junto a Andrew Ayer, 
+Asaf Peled, Made de Madera, un espacio de co-working para los amantes de la madera. A continuación, les cuento de qué se trata.
+</div>
+<div>
 ¿De qué se trata el proyecto?
-Made de Madera es un espacio de co-working por y para profesionales y aficionados de la madera. Se trata de un espacio donde las personas pueden ir a aprender y practicar sus habilidades y hacer sus propios proyectos. Se pueden alquilar bancos de trabajo por horas, días, semanas o meses, sin compromiso y con flexibilidad total de sus horas de trabajo. Las herramientas están disponibles en el taller, solo tienen que llevar su creatividad y su madera.
-
-También ofrecemos muchos cursos con profesores que vienen de todo España, vendemos herramientas y ofrecemos un servicio de elaboración de muebles de diseño personalizados
-
+Made de Madera es un espacio de co-working por y para profesionales y aficionados de la madera. Se trata de un espacio donde las
+ personas pueden ir a aprender y practicar sus habilidades y hacer sus propios proyectos. Se pueden alquilar bancos de trabajo por
+  horas, días, semanas o meses, sin compromiso y con flexibilidad total de sus horas de trabajo. Las herramientas están disponibles 
+  en el taller, solo tienen que llevar su creatividad y su madera.
+</div>
+<div>
+También ofrecemos muchos cursos con profesores que vienen de todo España, vendemos herramientas y ofrecemos un servicio de elaboración
+ de muebles de diseño personalizados
+</div>
+<div>
 ¿Cómo se les ocurrió la idea?
-Siempre me apasionó la carpintería, pero crear un taller propio taller es muy caro. Es una inversión increíble. Sabía que tenía que haber más personas en la misma situación que yo, así que decidí abrir un taller con las mejores herramientas que podía comprar y ofrecer a las personas una experiencia que no encuentran en ningún otro lugar de San Luis Argentina.
+Siempre me apasionó la carpintería, pero crear un taller propio taller es muy caro. Es una inversión increíble. Sabía que tenía que
+ haber más personas en la misma situación que yo, así que decidí abrir un taller con las mejores herramientas que podía comprar y
+  ofrecer a las personas una experiencia que no encuentran en ningún otro lugar de San Luis Argentina.
+</div>
 </p>
 </div>
     </footer>
