--- a/index3.html
+++ b/index3.html
@@ -41,7 +41,7 @@ Made de Madera es un espacio de co-working por y para profesionales y aficionado
   en el taller, solo tienen que llevar su creatividad y su madera.
 </div>
 <div>
-También ofrecemos muchos cursos con profesores que vienen de todo España, vendemos herramientas y ofrecemos un servicio de elaboración
+También ofrecemos muchos cursos con profesores que vienen de toda Argentina, vendemos herramientas y ofrecemos un servicio de elaboración
  de muebles de diseño personalizados
 </div>
 <div>
