--- a/index3.html
+++ b/index3.html
@@ -24,7 +24,7 @@
                 <li> <a href="index.html"> <-- Volver al Inicio </a></li>
               </ul>
                 </nav>
-                <div>
+              
                 <p>  Muchos de nosotros tenemos muebles de maderas hechos por nuestros abuelos. Sin embargo, 
                   es una tradición que no se ha mantenido. Aunque no estoy segura del por qué, se me ocurre que una 
                   de las razones puede ser la falta de espacio que se necesita para ubicar las máquinas y hacer aserrín.
@@ -42,7 +42,7 @@ Made de Madera es un espacio de co-working por y para profesionales y aficionado
 
 
 También ofrecemos muchos cursos con profesores que vienen de toda Argentina, vendemos herramientas y ofrecemos un servicio de elaboración
- de muebles de diseño personalizados
+ de muebles de diseño personalizados.
 
 
 ¿Cómo se les ocurrió la idea?
